# gridlens-ai-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.codex/skills/create-postman-requests/: SKILL.md
.codex/skills/create-postman-requests/agents/: openai.yaml
.codex/skills/create-postman-requests/references/: local-collection-guidelines.md
.codex/skills/fix-pr-findings/: SKILL.md
.codex/skills/fix-pr-findings/agents/: openai.yaml
.codex/skills/implement-issue/: SKILL.md
.codex/skills/implement-issue/agents/: openai.yaml
.codex/skills/plan-issue/: SKILL.md
.codex/skills/plan-issue/agents/: openai.yaml
.codex/skills/plan-issue/references/: handover-template.md
.codex/skills/pr-review/: SKILL.md
.codex/skills/pr-review/agents/: openai.yaml
.codex/skills/pr-review/references/: review-template.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml
.github/workflows/: ci.yml
.handover/: issue-37-plan.md  pr-review-feat-37-t06-frontend-scaffold-2026-06-29.md
docs/: architecture.md  coding-standards.md  data-model.md  folder-structure.md  issue-dependency-graph.md  local-development.md  pr-guideline.md  production-observability.md  requirements.md  testing-guideline.md
docs/api/: endpoints.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/app/: App.tsx
frontend/src/components/: AppShell.tsx  BrandMark.tsx  States.tsx
frontend/src/features/auth/: session.tsx
frontend/src/hooks/: useAsyncResource.ts
frontend/src/pages/: ProductPages.tsx  SignInPage.tsx  WorkspacePickerPage.tsx
frontend/src/routes/: ProtectedRoute.tsx  routeConfig.tsx  router.test.tsx  router.tsx
frontend/src/styles/: global.css
frontend/src/test/: render.tsx
infra/db/: Dockerfile  alembic.ini
infra/db/alembic/: env.py
infra/db/alembic/versions/: 20260630_0001_create_migration_baseline.py  20260630_0002_create_identity_file_audit_schema.py  20260630_0003_add_initial_rls_policies.py  20260702_0004_create_platform_role_assignments.py
infra/local/kong/: kong.yml
infra/local/observability/: loki.yaml  otel-collector.yaml  prometheus.yml  tempo.yaml
infra/local/postgres/init/: 001-gridlens-bootstrap.sh  001-gridlens-bootstrap.sql
infra/production/: observability.env.example
libs/ai/: README.md
libs/ai/src/gridlens_ai/: __init__.py  providers.py
libs/ai/tests/: test_providers.py
libs/auth/: README.md
libs/auth/src/gridlens_auth/: __init__.py  fastapi.py  jwks.py  permissions.py  resolution.py  tokens.py
libs/auth/tests/: test_auth.py  test_auth_fastapi.py  test_jwks.py  test_permissions.py  test_resolution.py
libs/config/: README.md
libs/config/src/gridlens_config/: __init__.py  (+1 more)
libs/config/tests/: test_settings.py
libs/contracts/: README.md
libs/contracts/tests/: test_contracts.py
libs/db/: README.md
libs/db/tests/: test_file_object_repository.py  test_rls.py  test_tenant_repository.py
libs/events/: README.md
libs/events/tests/: test_messages.py
libs/observability/: README.md
libs/observability/tests/: test_fastapi.py  test_foundation_path.py  test_logging.py  test_worker.py
libs/storage/: README.md
libs/storage/tests/: test_storage.py
libs/testing/: README.md
libs/testing/tests/: test_factories_and_boundaries.py
postman/: gridlens-local.postman_collection.json  gridlens-local.postman_environment.json
postman/.postman/: resources.yaml
postman/postman/environments/: GridLens Dev.environment.yaml  GridLens Local.environment.yaml
services/alerts-anomalies-service/: Dockerfile  README.md  pyproject.toml
services/alerts-anomalies-service/tests/: test_alerts_anomalies_health.py
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/devtools/: reload_debug.py
services/api-gateway/tests/: test_api_gateway_health.py  test_health.py
services/assistant-service/: Dockerfile  README.md  pyproject.toml
services/assistant-service/tests/: test_assistant_health.py  test_assistant_worker.py
services/data-operations-service/: Dockerfile  README.md  pyproject.toml
services/data-operations-service/tests/: test_data_operations_health.py  test_data_operations_worker.py  test_upload_authorization.py
services/governance-service/: Dockerfile  README.md  pyproject.toml
services/governance-service/tests/: test_governance_health.py
services/identity-tenant-service/: Dockerfile  README.md  pyproject.toml
services/identity-tenant-service/tests/: test_identity_tenant_health.py
services/insights-reporting-service/: Dockerfile  README.md  pyproject.toml
services/insights-reporting-service/tests/: test_insights_reporting_health.py  test_insights_reporting_worker.py
services/program-evaluation-service/: Dockerfile  README.md  pyproject.toml
services/program-evaluation-service/src/gridlens_program_evaluation_service/: __init__.py  main.py
services/program-evaluation-service/src/gridlens_program_evaluation_service/api/: __init__.py  health.py
services/program-evaluation-service/src/gridlens_program_evaluation_service/application/: __init__.py
services/program-evaluation-service/src/gridlens_program_evaluation_service/domain/: __init__.py
services/program-evaluation-service/src/gridlens_program_evaluation_service/infrastructure/: __init__.py
services/program-evaluation-service/src/gridlens_program_evaluation_service/workers/: __init__.py  main.py
services/program-evaluation-service/tests/: test_program_evaluation_health.py  test_program_evaluation_worker.py
tests/: test_local_runtime_config.py  test_postman_collections.py  test_production_observability_config.py  test_service_scaffolds.py
workers/local-runtime-worker/: Dockerfile  README.md
workers/local-runtime-worker/tests/: test_worker.py
(+116 files in other folders)
