[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gridlens-ai-platform"
version = "0.0.0"
description = "GridLens AI Platform foundation workspace"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "ruff>=0.8,<1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-ra"
python_files = ["test_*.py"]
testpaths = [
    "services/api-gateway/tests",
    "workers/local-runtime-worker/tests",
    "tests",
    "libs/contracts/tests",
    "libs/config/tests",
    "libs/auth/tests",
    "libs/db/tests",
    "libs/events/tests",
    "libs/storage/tests",
    "libs/ai/tests",
    "libs/observability/tests",
    "libs/testing/tests",
]
pythonpath = [
    "services/api-gateway/src",
    "workers/local-runtime-worker/src",
    "libs/contracts/src",
    "libs/config/src",
    "libs/auth/src",
    "libs/db/src",
    "libs/events/src",
    "libs/storage/src",
    "libs/ai/src",
    "libs/observability/src",
    "libs/testing/src",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "gridlens_ai_platform.egg-info",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "I",
]
ignore = [
    "E501",
]
