[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gridlens-ai-platform"
version = "0.0.0"
description = "GridLens AI Platform foundation workspace"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.115,<0.116",
    "httpx>=0.27,<1",
    "opentelemetry-api>=1.30,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<2",
    "opentelemetry-instrumentation-logging>=0.64b0,<1",
    "opentelemetry-sdk>=1.30,<2",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.400,<2",
    "pytest>=8.2,<9",
    "ruff>=0.8,<1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-ra"
python_files = ["test_*.py"]
testpaths = [
    "services/identity-tenant-service/tests",
    "services/data-operations-service/tests",
    "services/assistant-service/tests",
    "services/program-evaluation-service/tests",
    "services/insights-reporting-service/tests",
    "services/governance-service/tests",
    "services/alerts-anomalies-service/tests",
    "tests",
    "libs/contracts/tests",
    "libs/config/tests",
    "libs/auth/tests",
    "libs/db/tests",
    "libs/events/tests",
    "libs/storage/tests",
    "libs/ai/tests",
    "libs/observability/tests",
    "libs/testing/tests",
]
pythonpath = [
    "services/identity-tenant-service/src",
    "services/data-operations-service/src",
    "services/assistant-service/src",
    "services/program-evaluation-service/src",
    "services/insights-reporting-service/src",
    "services/governance-service/src",
    "services/alerts-anomalies-service/src",
    "libs/contracts/src",
    "libs/config/src",
    "libs/auth/src",
    "libs/db/src",
    "libs/events/src",
    "libs/storage/src",
    "libs/ai/src",
    "libs/observability/src",
    "libs/testing/src",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    ".venv",
    "gridlens_ai_platform.egg-info",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "I",
]
ignore = [
    "E501",
]

[tool.pyright]
include = [
    "services",
    "libs",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "gridlens_ai_platform.egg-info",
]
pythonVersion = "3.14"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
extraPaths = [
    "services/identity-tenant-service/src",
    "services/data-operations-service/src",
    "services/assistant-service/src",
    "services/program-evaluation-service/src",
    "services/insights-reporting-service/src",
    "services/governance-service/src",
    "services/alerts-anomalies-service/src",
    "libs/contracts/src",
    "libs/config/src",
    "libs/auth/src",
    "libs/db/src",
    "libs/events/src",
    "libs/storage/src",
    "libs/ai/src",
    "libs/observability/src",
    "libs/testing/src",
]
reportMissingTypeStubs = false
