[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gridlens-program-evaluation-service"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "httpx>=0.27,<1",
    "uvicorn[standard]>=0.32,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
